--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 				overflow: hidden; 
 				font-family: "Helvetica Neue", Helvetica; 
 				font-size: 14px;
+				width: 100%;
 			}
 
 			.mesh {
   				fill: none;
 			  	stroke: #000;
 			  	stroke-width: 2px;
+			  	padding-left: 100px;
 			}
 
 			.header {
@@ -40,10 +42,9 @@
 				padding-bottom: 20px;
 			}
 
-			/*.chart {
-				padding-top: 150px;
-				padding-left: 120px;
-			}*/
+		#chart {
+				margin-left: 150px;
+			}
 
 			.hr-style {
 			   border: 0;
