Add Comment Header
Added the comment header with what the document is, who contributed and revision history

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- Design and Code Project 2014
+     Authors: Lewis Deacon, Laura McCormack and Tom Townsend
+     HTML file to display the hexgrid with headers and footers taken from Stefanos index page
+     Revision History
+     Initial Creation - Lewis
+     Added some scripts - Lewis
+     Added Stefanos Header and Footer - Laura
+     Changed hexgrid script being used - Tom
+     Fixed some style issues - Laura-->
 <!DOCTYPE html>
 <html>
   <head>
