hexgrid uses SOM data now

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!-- Design and Code Project 2014
-     Authors: Lewis Deacon, Laura McCormack and Tom Townsend
-     HTML file to display the hexgrid with headers and footers taken from Stefanos index page
-     Revision History
-     Initial Creation - Lewis
-     Added some scripts - Lewis
-     Added Stefanos Header and Footer - Laura
-     Changed hexgrid script being used - Tom
-     Fixed some style issues - Laura-->
+﻿<!-- Design and Code Project 2014
+    Authors: Lewis Deacon, Laura McCormack and Tom Townsend
+    HTML file to display the hexgrid with headers and footers taken from Stefanos index page
+    Revision History
+    Initial Creation - Lewis
+    Added some scripts - Lewis
+    Added Stefanos Header and Footer - Laura
+    Changed hexgrid script being used - Tom
+    Fixed some style issues - Laura
+    Loaded data from php script - Simon-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -100,6 +101,7 @@
 	    
 		<div id="chart"></div>
 		
+		<script type="text/javascript" src="somdata.php"></script>
 		<script type="text/javascript" src="hexgridscript.js"></script>
 
 		<!-- footer -->
