updated revision history

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!-- Design and Code Project 2014
-    Authors: Lewis Deacon, Laura McCormack and Tom Townsend
+    Authors: Lewis Deacon, Laura McCormack, Tom Townsend and Tsz Kit Law
     HTML file to display the hexgrid with headers and footers taken from Stefanos index page
     Revision History
     Initial Creation - Lewis
@@ -7,7 +7,9 @@
     Added Stefanos Header and Footer - Laura
     Changed hexgrid script being used - Tom
     Fixed some style issues - Laura
-    Loaded data from php script - Simon-->
+    Loaded data from php script - Simon
+	changed the style for hex grid svg
+	-->
 <!DOCTYPE html>
 <html>
   <head>
