filtered least related topics of grants (less than 0.08) and updated revision history

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Changed hexgrid script being used - Tom
     Fixed some style issues - Laura
     Loaded data from php script - Simon
-	changed the style for hex grid svg
+	fix the width of hex grid svg div - Kit
 	-->
 <!DOCTYPE html>
 <html>
@@ -54,10 +54,10 @@
 				padding-bottom: 20px;
 			}
 
-#chart {
-    width: 1845px;
-    margin: 0 auto;
-}
+			#chart {
+				width: 1615px;
+				margin: 0 auto;
+			}
 
 			.hr-style {
 			   border: 0;
