--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     Fixed some style issues - Laura
     Loaded data from php script - Simon
 	fix the width of hex grid svg div - Kit
+	Performance optimisations - Simon
 	-->
 <!DOCTYPE html>
 <html>
@@ -16,8 +17,8 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<link rel="stylesheet" type="text/css" media="print, screen" href="http://researchperspectives.org/style.css"/>
 		
-		<script src="http://d3js.org/d3.v3.min.js"></script>
-		<script type="text/javascript" src="http://d3js.org/d3.hexbin.v0.min.js"></script>	
+		<script src="D3/d3.v3.min.js"></script>
+		<script type="text/javascript" src="D3/d3.hexbin.v0.min.js"></script>	
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script type="text/javascript" src="D3/d3.layout.cloud.js"></script>
 
@@ -106,7 +107,7 @@
         <div id="chart"></div>
 
 		
-		<script type="text/javascript" src="somdata.php"></script>
+		<script type="text/javascript" src="somdata.json"></script>
 		<script type="text/javascript" src="hexgridscript.js"></script>
 
 		<!-- footer -->
