--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+		<meta http-equiv="x-ua-compatible" content="IE=Edge"/>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<link rel="stylesheet" type="text/css" media="print, screen" href="http://researchperspectives.org/style.css"/>
 		
