Implemented two queries in new_topic_model, header update in all files and various little stuff

--- a/choose_csv_file.html
+++ b/choose_csv_file.html
@@ -1,3 +1,10 @@
+<!--
+Design and Code Project 2014
+ *  Authors: Tsz Chun Law
+ *  A html to let user to choose an input csv file for updating new grants.
+ *  Revision History
+ *  Initial Creation - Tsz Chun
+-->
 <html>
 <head>
 <title>File Uploading Form</title>
